<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/darkBackground">

    <Button
        android:id="@+id/signIn2"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="104dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:text="@string/registration_button"
        android:textColor="@color/textPrimary"
        android:textColorHighlight="@color/textAccent"
        android:textColorLink="@color/textPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termsAgreement"
        app:layout_constraintVertical_bias="0.068" />

    <TextView
        android:id="@+id/registrationWelcome"
        android:layout_width="349dp"
        android:layout_height="105dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/textPrimary"
        android:textColorHighlight="@color/textAccent"
        android:textColorLink="@color/textPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="@string/registration_welcome" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="325dp"
        android:layout_height="71dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/ministry_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/minsitryLogo3" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@color/textPrimary"
        android:textColorHighlight="@color/textAccent"
        android:textColorHint="@color/textHint"
        android:textColorLink="@color/textPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationWelcome" />

    <CheckBox
        android:id="@+id/termsAgreement"
        android:layout_width="358dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:buttonTint="@color/textAccent"
        android:text="@string/terms_agreement"
        android:textColor="@color/textPrimary"
        android:textColorHighlight="@color/textAccent"
        android:textColorLink="@color/textPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include4" />

    <include
        android:id="@+id/include4"
        layout="@layout/password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include3" />

    <include
        android:id="@+id/include3"
        layout="@layout/username_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

</androidx.constraintlayout.widget.ConstraintLayout>